# RcloneShuttle

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  cargo-sources.json  flatpak-manifest.yaml  icons.toml  io.github.pieterdd.RcloneShuttle.yaml
.github/workflows/: rust.yml
meta/: io.github.pieterdd.RcloneShuttle.desktop  io.github.pieterdd.RcloneShuttle.metainfo.xml  metainfo.xml
src/: client.rs  config.rs  globals.rs  main.rs  model.rs  path_tools.rs
src/components/: file_listing_view.rs  mod.rs  queue_button.rs  queue_detail_view.rs  queue_dialog.rs  queue_view.rs  remote_view.rs  string_prompt_dialog.rs  string_prompt_popover.rs  unlock_view.rs
src/icons/: mod.rs
