[package]
name = "rclone-shuttle"
version = "0.1.0"
edition = "2021"
exclude = [
    ".flatpak-builder",
    "flatpak-build",
    "repo",
    "meta",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
inquire = "0.6.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
time = { version = "0.3.34", features = ["serde", "parsing", "formatting"] }
relm4 = { version = "0.8.1", features = ["macros", "libadwaita", "gnome_44", "adw", "gnome_45"] }
relm4-icons = { version = "0.8.2", features = ["all"] }
uuid = { version = "1.7.0", features = ["v4"] }
dirs = "5.0.1"
open = "5.1.2"
size_format = "1.0.2"
confy = "0.6.1"
