[package]
name = "rclone-shuttle"
version = "0.1.7"
edition = "2021"
exclude = [
    ".flatpak-builder",
    "flatpak-build",
    "repo",
    "meta",
]
description = "Upload your files to anywhere"
license = "GPL-3.0-or-later"

[package.metadata.winres]
ProductName = "Rclone Shuttle"
FileDescription = "File browser for Rclone"
OriginalFilename = "rclone-shuttle.exe"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rclone-shuttle", dest = "/usr/bin/rclone-shuttle", mode = "0755" },
    { source = "meta/io.github.pieterdd.RcloneShuttle.desktop", dest = "/usr/share/applications/", mode = "0644" },
    { source = "meta/io.github.pieterdd.RcloneShuttle.png", dest = "/usr/share/icons/hicolor/512x512/apps/", mode = "0644" },
]

[package.metadata.generate-rpm.requires]
gtk4 = ">= 4.14.3"
rclone = ">= 1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[build-dependencies]
relm4-icons-build = "0.10"

[dependencies]
chrono = "0.4.34"
inquire = "0.6.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
time = { version = "0.3.36", features = ["serde", "parsing", "formatting"] }
relm4 = { version = "0.10", features = ["macros", "libadwaita", "gnome_44", "adw", "gnome_45", "gnome_46"] }
relm4-icons = { version = "0.10", features = ["all"] }
uuid = { version = "1.7.0", features = ["v4"] }
dirs = "5.0.1"
open = "5.1.2"
size_format = "1.0.2"
confy = "0.6.1"
relm4-components = { version = "0.10", features = ["libadwaita"] }
regex = "1.10.5"

[dev-dependencies]
test-case = "3.3.1"
